--- a/Section 1.ipynb
+++ b/Section 1.ipynb
@@ -11,23 +11,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This project will investigate clothing items offered at the global online retail company, LightInTheBox. The main questions to be investigated are:\n",
+    "This project will investigate clothing items offered at the global online retail company, LightInTheBox and perform a competitive analysis for another company including price suggestions based on the competition and daily trends. The main questions to be investigated are:\n",
     "\n",
-    "Are Men's and Women's clothing items are priced slightly differently for similar types of clothing items on average?\n",
+    "How does price fluctuate at LightInTheBox over 4 weeks, and how are prices affected by global events?\n",
+    "\n",
+    "How does a competitor compare to LightInTheBox on pricing, inventory, and demographics?\n",
+    "\n",
+    "Given LightInTheBox's prices for certain items, how should competitors price their items?\n",
     "\n",
     "What proportion of the inventory is for plus, petite, and regular sizes? Does this reflect the demand and demographics of the population?\n",
     "\n",
     "What items are most popular for each country?\n",
     "\n",
-    "What item materials are most popular for men and women by country?\n",
+    "What items are most popular for men and women by country?\n",
     "\n",
     "How much inventory is there for each clothing type for LightInTheBox?\n",
     "\n",
-    "The Dataset used for this project is all Men's and Women's clothing items sold online at LightInTheBox.com- a global online retail company that offers products in apparel, small accessories and gadgets and home and garden. The data includes 43520 items, with 25930 Men's items and 17590 Women's items. The data was scraped using a web scraper to parse HTML and JSON, and is stored in an sqlite database. The LightInTheBox website was chosen due to it's large number and variety of items, accessibilty of data for scraping, and good organization of it's site for scraping.The LightInTheBox Holding Co., Ltd. takes in ~240 million in revenue annually, delivers products to consumers in over 200 countries, and has websites which are available in 26 major languages according to the company's website (http://ir.lightinthebox.com/static-files/919bdd91-9598-4465-bdf1-ec1f226a2586).\n",
+    "The Dataset used for this project will be all Men's and Women's clothing items sold online at LightInTheBox.com- a global online retail company that offers products in apparel, small accessories and gadgets, and home and garden. The data includes 43520 items, with 25930 Men's items and 17590 Women's items. The data was scraped using a web scraper to parse HTML and JSON, and is stored in an sqlite database. The LightInTheBox website was chosen due to it's large number and variety of items, accessibilty of data for scraping, and good organization of it's site for scraping.The LightInTheBox Holding Co., Ltd. takes in ~240 million in revenue annually, delivers products to consumers in over 200 countries, and has websites which are available in 26 major languages according to the company's website (http://ir.lightinthebox.com/static-files/919bdd91-9598-4465-bdf1-ec1f226a2586).\n",
     "\n",
-    "I was motivated to tackle this problem because I am very interested in retail and clothing, and I enjoy creating and designing my own clothing. I was motivated to explore LightInTheBox's data because they are a unique international brand with a lot of statistics for each item, such as fabric, Popular Countries, listing date, pattern type, garment type subcategory and trends. I am very interested in retail trends over time, and I am interested in periodic scraping to track price over time for items.\n",
+    "For a competitive analysis, I will also scrape a competitor's website, such as shein.com. However, the end user of this project could be any retail company with an e-commerce business in competition with LightInTheBox, or anyone who wants to understand LightInTheBox’s position in the market. It will solve the common problem of businesses having too much data and not enough time to sift through it and find actionable insight about competitors such as trends, price fluctuations, and what items are popular per demographic. Some businesses may also be unsure of how the market is changing to do technology trends or global events, or they may have increasing competition and no visibility into how they stack up. A lack of this type of information or specialized tool to show meaning from it can mean success or failure for a business, especially in its early stages. It is therefore very urgent for retail businesses to have it. Business often pay for third party competitive analysis tools, so its proven to be a problem that companies are willing to pay for a solution to. However, third party products may not be ideal for all cases, which is why this project is important to showing the benefits of a specialized end to end solution that's easy to use and low maintenance.\n",
     "\n",
-    "Below are figures showing some item types and distribution of items that a popular for each country.\n"
+    "I was motivated to tackle this problem because I am very interested in retail and clothing, and I enjoy creating and designing my own clothing. I chose to explore LightInTheBox's data because they are a unique international brand with a lot of statistics for each item, such as fabric, Popular Countries, listing date, pattern type, garment type subcategory and trends. I am very interested in retail trends over time, and I am interested in periodic scraping to track price over time for items.\n",
+    "Below are figures showing some item types and distribution of items that are popular for each country in the data set from LightInTheBox.\n",
+    "\n",
+    "Below are two figures showing the types of items in the database and some countries that have popular items in the database."
    ]
   },
   {
